# vectordb

./: .gitignore  CHANGELOG_MMAP_SIMPLIFICATION.md  Cargo.toml  DESIGN.md  IMPLEMENTATION_SUMMARY.md  PARALLEL_PROBE_OPTIMIZATION.md  QUICKSTART.md  README.md  build_python_bindings.sh  pyproject.toml  requirements.txt
.cargo/: config.toml
benches/: BENCHMARKS.md  BENCHMARK_SUMMARY.md  README.md  clustering_bench.rs  distance_bench.rs  e2e_bench.rs  gist_benchmark.rs  gist_comparison.rs  index_bench.rs  profile_bench.rs  quantization_bench.rs  rabitq_bench.rs  recall_bench.rs  recall_bench_fast.rs  recall_comparison_binary_vs_rabitq_gist.rs  recall_comparison_binary_vs_rabitq_sift.rs  recall_diagnostic.rs  recall_fast.rs  recall_proper.rs  sift_benchmark.rs  sift_comparison.rs  sift_microbench.rs  speed_bench_1m_vectors.rs  speed_fast.rs  tune_tree_params.rs
benches/saved/jan_29_1M_vectors/: shell_output.txt
datasets/: .gitignore  DATASETS_README.md  README.md  generate_datasets.rs  inspect_dataset.rs
datasets/gist/: README.md  create_subset.rs  loader.rs  mod.rs
datasets/sift/: README.md  create_subset.rs  download.sh  loader.rs
docs/: Turbopuffer project idea.md
docs/Wed Jan 28 - optimizing for laptop performance/: ARCHITECTURE_COMPARISON.md  BENCHMARK_QUICK_START.md  SCALABILITY_PLAN.md  SCALE_ANALYSIS.md
docs/debugging/Wed Jan 28 - optimizing for laptop performance/: SCALE_ANALYSIS.md  SPEED_CHECKLIST.md  SPEED_OPTIMIZATION.md
docs/debugging/benchmarking/: README.md
docs/debugging/recall/: BINARY_QUANTIZATION_ISSUE.md  KMEANS_RECALL_PROBLEM.md
docs/design/: ADAPTIVE_LEAF_SIZING.md  IMPLEMENTATION_SUMMARY.md  MMAP_STORAGE.md  PARALLEL_PROBE_OPTIMIZATION.md  RABITQ_FINDINGS.md  SCALING_ANALYSIS.md  SIMPLIFIED_MMAP.md
docs/goals/: SCALING_GOALS.md
docs/recall/: RECALL_ANALYSIS.md  RECALL_ROOT_CAUSE.md
docs/vectordbbench_integration/: VECTORDBBENCH_INTEGRATION.md  VECTORDBBENCH_QUICK_TEST.md
examples/: clustered_demo.rs  comprehensive_recall_test.rs  dataset_loader.rs  hierarchical_demo.rs  mmap_demo.rs  observability_demo.rs  profile_query.rs  quantization_demo.rs  scale_demo.rs  visualize_search.rs
examples/visualization/: README.md  VISUALIZATION_GUIDE.md  generate_visualizations.sh  visualize.py
scripts/: benchmark.sh  export_results.sh
src/: lib.rs  main.rs  python_bindings.rs  visualization.rs
src/clustering/: kmeans.rs  mod.rs
src/distance/: mod.rs  scalar.rs  simd_neon.rs
src/index/: clustered.rs  hierarchical.rs  hierarchical_rabitq.rs  hierarchical_with_rabitq.rs  mod.rs  quantized.rs
src/quantization/: binary.rs  mod.rs  rabitq.rs
src/storage/: MMAP_STORAGE.md  QUICK_START_MMAP.md  mmap.rs  mod.rs
tests/: integration_tests.rs
working_docs/: vectordb-getting-started.md
working_docs/Wed Jan 28 - optimizing for laptop performance/: OPTIMIZATION_LOG.md  SCALE_QUICK_REF.md  SPEED_CHECKLIST.md  SPEED_OPTIMIZATION.md
working_docs/recall/: BINARY_QUANTIZATION_ISSUE.md  KMEANS_RECALL_PROBLEM.md  RECALL_COMPLETE_ANALYSIS.md  RECALL_SUMMARY_FOR_USER.md
