[package]
name = "vectordb"
version = "0.1.0"
edition = "2021"

[dependencies]
# Linear algebra
ndarray = { version = "0.16", features = ["rayon"] }
ndarray-rand = "0.15"

# Parallelism
rayon = "1.10"

# Random number generation
rand = "0.8"
rand_distr = "0.4"

# Memory mapping for disk-backed vectors
memmap2 = "0.9"

# Serialization
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }

# Benchmarking and profiling
criterion = { version = "0.5", features = ["html_reports"] }

# CLI for testing
clap = { version = "4.4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
proptest = "1.4"  # Property-based testing

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.bench]
inherits = "release"
debug = true  # For profiling

[[bench]]
name = "distance_bench"
harness = false
