[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "vectordb"
version = "0.1.0"
description = "High-performance vector database with hierarchical clustering and RaBitQ quantization"
authors = [{name = "VectorDB Team"}]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.maturin]
features = ["python"]
module-name = "vectordb"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "numpy>=1.20",
]
